fix content z-index for mobile view

--- a/src/scss/layout/_dashboard-default.scss
+++ b/src/scss/layout/_dashboard-default.scss
@@ -41,7 +41,7 @@
         width: 100%;
         height: 100%;
         background: $black;
-        z-index: $zindex-modal-backdrop;
+        z-index: $zindex-content;
         opacity: 0.5;
         transition: opacity 0.3s ease-in-out;
       }
