--- a/src/scss/variables/_navigation.scss
+++ b/src/scss/variables/_navigation.scss
@@ -1,4 +1,5 @@
 // Z index variables
+$zindex-content: 1037 !default;
 $zindex-sidenav: 1038 !default;
 $zindex-topnav: 1039 !default;
 
